<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/dp_8"
        android:text="归还明细"
        android:textColor="@color/black"
        android:textSize="@dimen/sp_22" />

    <LinearLayout
        android:id="@+id/title_up"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingTop="@dimen/dp_20">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/goods_id"
            android:textColor="@color/black" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:gravity="center"
            android:text="@string/goods_name"
            android:textColor="@color/black" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/goods_use_weight"
            android:textColor="@color/black" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/goods_back_date"
            android:textColor="@color/black" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/title_down"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title_up"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingTop="@dimen/dp_30">

        <TextView
            android:id="@+id/back_id"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/goods_id"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/back_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:gravity="center"
            android:text="@string/goods_name"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/back_weight"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/goods_use_weight"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/back_time"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/goods_back_date"
            android:textColor="@color/black" />

    </LinearLayout>




</RelativeLayout>