<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/dp_8"
        android:text="取出明细"
        android:textColor="@color/black"
        android:textSize="@dimen/sp_22" />

    <LinearLayout
        android:id="@+id/title_up"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingTop="@dimen/dp_30">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/goods_id"
            android:textColor="@color/black" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:gravity="center"
            android:text="@string/goods_name"
            android:textColor="@color/black" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/goods_now_weight"
            android:textColor="@color/black" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/goods_pickup_date"
            android:textColor="@color/black" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/title_down"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title_up"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingTop="@dimen/dp_50">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/goods_id"
            android:textColor="@color/black" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:gravity="center"
            android:text="@string/goods_name"
            android:textColor="@color/black" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/goods_now_weight"
            android:textColor="@color/black" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/goods_pickup_date"
            android:textColor="@color/black" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title_down"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingTop="@dimen/dp_10">

        <Button
            android:layout_width="@dimen/dp_25"
            android:layout_height="@dimen/dp_25"
            android:background="@drawable/left" />

        <TextView
            android:id="@+id/page_num"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="1/10"
            android:textColor="@color/black" />

        <Button
            android:layout_width="@dimen/dp_25"
            android:layout_height="@dimen/dp_25"
            android:layout_toRightOf="@+id/page_num"
            android:background="@drawable/right" />


    </LinearLayout>


</RelativeLayout>